@@ -1,0 +1,11 @@
+lib_LIBRARIES = libgpukernel.a
+libgpukernel_a_SOURCES = \
+	gpukernel.h \
+	opencl.dat \
+	opencl.c
+
+AM_CFLAGS = -Wall -fno-strict-aliasing
+
+INCLUDES = -I$(top_srcdir)/src/libstruct \
+	-I$(top_srcdir)/src/libmhandle
+
