@@ -1,0 +1,74 @@
+DEF_OPENCL_FUNC(clGetPlatformIDs, 3)
+DEF_OPENCL_FUNC(clGetPlatformInfo, 5)
+DEF_OPENCL_FUNC(clGetDeviceIDs, 5)
+DEF_OPENCL_FUNC(clGetDeviceInfo, 5)
+DEF_OPENCL_FUNC(clCreateContext, 6)
+DEF_OPENCL_FUNC(clCreateContextFromType, 5)
+DEF_OPENCL_FUNC(clRetainContext, 1)
+DEF_OPENCL_FUNC(clReleaseContext, 1)
+DEF_OPENCL_FUNC(clGetContextInfo, 5)
+DEF_OPENCL_FUNC(clCreateCommandQueue, 4)
+DEF_OPENCL_FUNC(clRetainCommandQueue, 1)
+DEF_OPENCL_FUNC(clReleaseCommandQueue, 1)
+DEF_OPENCL_FUNC(clGetCommandQueueInfo, 5)
+DEF_OPENCL_FUNC(clSetCommandQueueProperty, 4)
+DEF_OPENCL_FUNC(clCreateBuffer, 5)
+DEF_OPENCL_FUNC(clCreateSubBuffer, 5)
+DEF_OPENCL_FUNC(clCreateImage2D, 8)
+DEF_OPENCL_FUNC(clCreateImage3D, 10)
+DEF_OPENCL_FUNC(clRetainMemObject, 1)
+DEF_OPENCL_FUNC(clReleaseMemObject, 1)
+DEF_OPENCL_FUNC(clGetSupportedImageFormats, 6)
+DEF_OPENCL_FUNC(clGetMemObjectInfo, 5)
+DEF_OPENCL_FUNC(clGetImageInfo, 5)
+DEF_OPENCL_FUNC(clSetMemObjectDestructorCallback, 3)
+DEF_OPENCL_FUNC(clCreateSampler, 5)
+DEF_OPENCL_FUNC(clRetainSampler, 1)
+DEF_OPENCL_FUNC(clReleaseSampler, 1)
+DEF_OPENCL_FUNC(clGetSamplerInfo, 5)
+DEF_OPENCL_FUNC(clCreateProgramWithSource, 5)
+DEF_OPENCL_FUNC(clCreateProgramWithBinary, 7)
+DEF_OPENCL_FUNC(clRetainProgram, 1)
+DEF_OPENCL_FUNC(clReleaseProgram, 1)
+DEF_OPENCL_FUNC(clBuildProgram, 6)
+DEF_OPENCL_FUNC(clUnloadCompiler, 0)
+DEF_OPENCL_FUNC(clGetProgramInfo, 5)
+DEF_OPENCL_FUNC(clGetProgramBuildInfo, 6)
+DEF_OPENCL_FUNC(clCreateKernel, 3)
+DEF_OPENCL_FUNC(clCreateKernelsInProgram, 4)
+DEF_OPENCL_FUNC(clRetainKernel, 1)
+DEF_OPENCL_FUNC(clReleaseKernel, 1)
+DEF_OPENCL_FUNC(clSetKernelArg, 4)
+DEF_OPENCL_FUNC(clGetKernelInfo, 5)
+DEF_OPENCL_FUNC(clGetKernelWorkGroupInfo, 6)
+DEF_OPENCL_FUNC(clWaitForEvents, 2)
+DEF_OPENCL_FUNC(clGetEventInfo, 5)
+DEF_OPENCL_FUNC(clCreateUserEvent, 2)
+DEF_OPENCL_FUNC(clRetainEvent, 1)
+DEF_OPENCL_FUNC(clReleaseEvent, 1)
+DEF_OPENCL_FUNC(clSetUserEventStatus, 2)
+DEF_OPENCL_FUNC(clSetEventCallback, 4)
+DEF_OPENCL_FUNC(clGetEventProfilingInfo, 5)
+DEF_OPENCL_FUNC(clFlush, 1)
+DEF_OPENCL_FUNC(clFinish, 1)
+DEF_OPENCL_FUNC(clEnqueueReadBuffer, 9)
+DEF_OPENCL_FUNC(clEnqueueReadBufferRect, 14)
+DEF_OPENCL_FUNC(clEnqueueWriteBuffer, 9)
+DEF_OPENCL_FUNC(clEnqueueWriteBufferRect, 14)
+DEF_OPENCL_FUNC(clEnqueueCopyBuffer, 9)
+DEF_OPENCL_FUNC(clEnqueueCopyBufferRect, 13)
+DEF_OPENCL_FUNC(clEnqueueReadImage, 11)
+DEF_OPENCL_FUNC(clEnqueueWriteImage, 11)
+DEF_OPENCL_FUNC(clEnqueueCopyImage, 9)
+DEF_OPENCL_FUNC(clEnqueueCopyImageToBuffer, 9)
+DEF_OPENCL_FUNC(clEnqueueCopyBufferToImage, 9)
+DEF_OPENCL_FUNC(clEnqueueMapBuffer, 10)
+DEF_OPENCL_FUNC(clEnqueueMapImage, 12)
+DEF_OPENCL_FUNC(clEnqueueUnmapMemObject, 6)
+DEF_OPENCL_FUNC(clEnqueueNDRangeKernel, 9)
+DEF_OPENCL_FUNC(clEnqueueTask, 5)
+DEF_OPENCL_FUNC(clEnqueueNativeKernel, 10)
+DEF_OPENCL_FUNC(clEnqueueMarker, 2)
+DEF_OPENCL_FUNC(clEnqueueWaitForEvents, 3)
+DEF_OPENCL_FUNC(clEnqueueBarrier, 1)
+DEF_OPENCL_FUNC(clGetExtensionFunctionAddress, 1)
