@@ -23,5 +23,6 @@ INCLUDES = -I$(top_srcdir)/src/libstruct \
 	-I$(top_srcdir)/src/libmhandle \
 	-I$(top_srcdir)/src/libopt \
 	-I$(top_srcdir)/src/libmisc \
-	-I$(top_srcdir)/src/libdisasm
+	-I$(top_srcdir)/src/libdisasm \
+	-I$(top_srcdir)/src/libgpukernel
 
