@@ -323,4 +323,4 @@ DEFSYSCALL(signalfd, 321)
 DEFSYSCALL(timerfd, 322)
 DEFSYSCALL(eventfd, 323)
 DEFSYSCALL(fallocate, 324)
-DEFSYSCALL(, 325)
+DEFSYSCALL(opencl, 325)
